// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`circular dependency 1`] = `
"Not all files could be compiled due to circular dependency


        All files: [
  \\"conduit_a.cdt\\",
  \\"conduit_b.cdt\\"
]


        Resolved: []
        "
`;

exports[`dependency multi file 1`] = `
Object {
  "conduit_a.proto": "
syntax=\\"proto2\\";
        

        
        
message m1 {
	required double d = 1;
}
        ",
  "conduit_b.proto": "
syntax=\\"proto2\\";
        import \\"conduit_a.proto\\";

        
        
message m2 {
	required m1 m = 1;
}
        ",
}
`;

exports[`dependency subdirs 1`] = `
Object {
  "conduit_a.proto": "
syntax=\\"proto2\\";
        

        
        
message m1 {
	required double d = 1;
}
        ",
  "conduit_d.proto": "
syntax=\\"proto2\\";
        import \\"sub/conduit_c.proto\\";

        
        
message D {
	required m2 d = 1;
}
        ",
  "sub/conduit_b.proto": "
syntax=\\"proto2\\";
        import \\"conduit_a.proto\\";

        
        
message m2 {
	required m1 m = 1;
}
        ",
  "sub/conduit_c.proto": "
syntax=\\"proto2\\";
        import \\"conduit_a.proto\\";
import \\"sub/conduit_b.proto\\";

        
        
message m2 {
	required m1 m1 = 1;
	required m2 m2 = 2;
}
        ",
}
`;

exports[`function with invalid return type 1`] = `"Unable to find SomeType"`;

exports[`function with type return returns none 1`] = `"No return yet expected a SomeType"`;

exports[`function with unknown types 1`] = `"Unable to find SomeType"`;

exports[`function with void returns type 1`] = `"Returning [a] which is of type SomeType but expected void return"`;

exports[`simple echo function 1`] = `
Object {
  "conduit_a.function": "
        [
  {
    \\"kind\\": \\"Function\\",
    \\"loc\\": {
      \\"startColNumber\\": 5,
      \\"startLineNumber\\": 4,
      \\"endColNumber\\": 17,
      \\"endLineNumber\\": 6
    },
    \\"name\\": \\"echo\\",
    \\"part\\": {
      \\"ParameterList\\": {
        \\"kind\\": \\"ParameterList\\",
        \\"loc\\": {
          \\"startColNumber\\": 17,
          \\"startLineNumber\\": 6,
          \\"endColNumber\\": 18,
          \\"endLineNumber\\": 6
        },
        \\"children\\": {
          \\"Parameter\\": [
            {
              \\"kind\\": \\"Parameter\\",
              \\"name\\": \\"s\\",
              \\"loc\\": {
                \\"startColNumber\\": 18,
                \\"startLineNumber\\": 6,
                \\"endColNumber\\": 21,
                \\"endLineNumber\\": 6
              },
              \\"part\\": {
                \\"ParameterType\\": {
                  \\"kind\\": \\"ParameterType\\"
                }
              }
            }
          ]
        }
      },
      \\"ReturnTypeSpec\\": {
        \\"kind\\": \\"ReturnTypeSpec\\"
      },
      \\"FunctionBody\\": {
        \\"kind\\": \\"FunctionBody\\",
        \\"loc\\": {
          \\"startColNumber\\": 33,
          \\"startLineNumber\\": 6,
          \\"endColNumber\\": 35,
          \\"endLineNumber\\": 6
        },
        \\"children\\": {
          \\"Statement\\": [
            {
              \\"kind\\": \\"Statement\\"
            }
          ]
        }
      }
    }
  }
]
        ",
  "conduit_a.proto": "
syntax=\\"proto2\\";
        

        
        
message Shout {
	required string m = 1;
}
        ",
}
`;

exports[`simple multi file 1`] = `
Object {
  "conduit_a.proto": "
syntax=\\"proto2\\";
        

        
        
message m1 {
	required double d = 1;
}
        ",
  "conduit_b.proto": "
syntax=\\"proto2\\";
        import \\"conduit_a.proto\\";

        
        
message m2 {
	required double d = 1;
}


message m1 {
	required m2 m = 1;
}
        ",
}
`;

exports[`subdir isn't referenced in present dir 1`] = `"Cannot find imported file conduit_c.cdt from file conduit_b.cdt"`;
